First version to the cloud
First version to the cloud

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-REACT_APP_PUBLIC_FOLDER = http://localhost:9000/images/
-GENERATE_SOURCEMAP=false
+REACT_APP_PUBLIC_FOLDER = https://central-backend-bots.azurewebsites.net/images/
+REACT_APP_CLIENTNR=111111
+REACT_APP_GWOKUTOKEN=mytoken
+REACT_APP_CHAT_URL = http://localhost:4000
