--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 REACT_APP_PUBLIC_FOLDER = https://central-backend-bots.azurewebsites.net/images/
 REACT_APP_CLIENTNR=111111
 REACT_APP_GWOKUTOKEN=mytoken
-REACT_APP_CHAT_URL = http://localhost:4000
+REACT_APP_CHAT_URL = https://orange-smoke-0d4f93a10.3.azurestaticapps.net
+REACT_APP_ADMIN_URL = https://orange-smoke-0d4f93a10.3.azurestaticapps.net
