Api calls were not working due to proxy failure
Removed proxy setting and put the backend url into an .env. variable

--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@ REACT_APP_PUBLIC_FOLDER = https://central-backend-bots.azurewebsites.net/images/
 REACT_APP_CLIENTNR=111111
 REACT_APP_GWOKUTOKEN=mytoken
 REACT_APP_CHAT_URL = https://orange-smoke-0d4f93a10.3.azurestaticapps.net
-REACT_APP_ADMIN_URL = https://orange-smoke-0d4f93a10.3.azurestaticapps.net
+REACT_APP_ADMIN_URL = https://nice-rock-0840f8b10.3.azurestaticapps.net
+REACT_APP_CENTRAL_BACK = https://central-backend-bots.azurewebsites.net/api
