--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "dotenv": "^16.0.3",
+    "fs": "^0.0.1-security",
+    "langchain": "^0.0.75",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-file-picker": "^0.0.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "timeago.js": "^4.0.2",
+    "use-file-picker": "^1.6.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3005 && react-scripts start",
     "build": "CI=false && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -40,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.59"
   }
 }
