--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-REACT_APP_PUBLIC_FOLDER = https://central-backend-bots.azurewebsites.net/images/
+REACT_APP_PUBLIC_FOLDER = https://apis.gwocu.com/images/
 REACT_APP_CLIENTNR=111111
 REACT_APP_GWOKUTOKEN=mytoken
-REACT_APP_CHAT_URL = https://orange-smoke-0d4f93a10.3.azurestaticapps.net
-REACT_APP_ADMIN_URL = https://nice-rock-0840f8b10.3.azurestaticapps.net
-REACT_APP_CENTRAL_BACK = https://central-backend-bots.azurewebsites.net/api
+REACT_APP_CHAT_URL = https://chatbot.gwocu.com
+REACT_APP_ADMIN_URL = https://chatbotadmin.gwocu.com
+REACT_APP_CENTRAL_BACK = https://apis.gwocu.com/api
