--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "fs": "^0.0.1-security",
     "langchain": "^0.0.75",
+    "node-forge": "^1.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-file-picker": "^0.0.6",
