--- a/package.json
+++ b/package.json
@@ -13,11 +13,17 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "crypto-js": "^4.1.1",
+    "d3": "5.16",
+    "d3-drag": "^3.0.0",
+    "d3-force": "^3.0.0",
+    "d3-shape": "^3.2.0",
+    "d3-zoom": "^3.0.0",
     "dotenv": "^16.0.3",
     "fs": "^0.0.1-security",
     "langchain": "^0.0.75",
     "node-forge": "^1.3.1",
     "react": "^17.0.2",
+    "react-d3-graph": "^2.6.0",
     "react-dom": "^17.0.2",
     "react-file-picker": "^0.0.6",
     "react-router-dom": "^5.2.0",
