--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
     "react-file-picker": "^0.0.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.8.0",
     "timeago.js": "^4.0.2",
     "use-file-picker": "^1.6.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "set PORT=3005 && react-scripts start",
+    "start": "set PORT=3008 && react-scripts start",
     "build": "CI=false && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
